@@ -20,6 +20,7 @@ import static gov.cdc.usds.simplereport.api.converter.FhirConstants.NULL_CODE_SY
 import static gov.cdc.usds.simplereport.api.converter.FhirConstants.ORDER_CONTROL_CODE_OBSERVATIONS;
 import static gov.cdc.usds.simplereport.api.converter.FhirConstants.ORDER_CONTROL_CODE_SYSTEM;
 import static gov.cdc.usds.simplereport.api.converter.FhirConstants.ORDER_CONTROL_EXTENSION_URL;
+import static gov.cdc.usds.simplereport.api.converter.FhirConstants.ORDER_EFFECTIVE_DATE_EXTENSION_URL;
 import static gov.cdc.usds.simplereport.api.converter.FhirConstants.PRACTICIONER_IDENTIFIER_SYSTEM;
 import static gov.cdc.usds.simplereport.api.converter.FhirConstants.PROCESSING_ID_DISPLAY;
 import static gov.cdc.usds.simplereport.api.converter.FhirConstants.PROCESSING_ID_SYSTEM;
@@ -33,6 +34,7 @@ import static gov.cdc.usds.simplereport.api.converter.FhirConstants.TRIBAL_AFFIL
 import static gov.cdc.usds.simplereport.api.converter.FhirConstants.UNIVERSAL_ID_SYSTEM;
 import static gov.cdc.usds.simplereport.api.converter.FhirConstants.YESNO_CODE_SYSTEM;
 
+import ca.uhn.fhir.model.api.TemporalPrecisionEnum;
 import com.google.i18n.phonenumbers.NumberParseException;
 import com.google.i18n.phonenumbers.PhoneNumberUtil;
 import com.google.i18n.phonenumbers.PhoneNumberUtil.PhoneNumberFormat;
@@ -54,9 +56,14 @@ import gov.cdc.usds.simplereport.db.model.auxiliary.PersonName;
 import gov.cdc.usds.simplereport.db.model.auxiliary.PhoneType;
 import gov.cdc.usds.simplereport.db.model.auxiliary.StreetAddress;
 import gov.cdc.usds.simplereport.db.model.auxiliary.TestCorrectionStatus;
+import gov.cdc.usds.simplereport.service.TestOrderService;
+import gov.cdc.usds.simplereport.utils.DateGenerator;
 import gov.cdc.usds.simplereport.utils.MultiplexUtils;
+import gov.cdc.usds.simplereport.utils.UUIDGenerator;
 import java.time.LocalDate;
 import java.time.ZoneId;
+import java.time.ZoneOffset;
+import java.time.ZonedDateTime;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.HashSet;
@@ -64,10 +71,11 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.TimeZone;
 import java.util.UUID;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import javax.validation.constraints.NotNull;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.validator.routines.checkdigit.LuhnCheckDigit;
@@ -111,17 +119,20 @@ import org.hl7.fhir.r4.model.StringType;
 import org.hl7.fhir.r4.model.Type;
 import org.springframework.boot.info.GitProperties;
 import org.springframework.data.util.Pair;
+import org.springframework.stereotype.Component;
 import org.springframework.util.CollectionUtils;
 
+@Component
 @Slf4j
+@RequiredArgsConstructor
 public class FhirConverter {
-  private FhirConverter() {
-    throw new IllegalStateException("Utility class");
-  }
+
+  private final UUIDGenerator uuidGenerator;
+  private final DateGenerator dateGenerator;
 
   private static final String SIMPLE_REPORT_ORG_ID = "07640c5d-87cd-488b-9343-a226c5166539";
 
-  public static HumanName convertToHumanName(@NotNull PersonName personName) {
+  public HumanName convertToHumanName(@NotNull PersonName personName) {
     return convertToHumanName(
         personName.getFirstName(),
         personName.getMiddleName(),
@@ -129,8 +140,7 @@ public class FhirConverter {
         personName.getSuffix());
   }
 
-  public static HumanName convertToHumanName(
-      String first, String middle, String last, String suffix) {
+  public HumanName convertToHumanName(String first, String middle, String last, String suffix) {
     var humanName = new HumanName();
     if (StringUtils.isNotBlank(first)) {
       humanName.addGiven(first);
@@ -147,14 +157,12 @@ public class FhirConverter {
     return humanName;
   }
 
-  public static List<ContactPoint> convertPhoneNumbersToContactPoint(
+  public List<ContactPoint> convertPhoneNumbersToContactPoint(
       @NotNull List<PhoneNumber> phoneNumber) {
-    return phoneNumber.stream()
-        .map(FhirConverter::convertToContactPoint)
-        .collect(Collectors.toList());
+    return phoneNumber.stream().map(this::convertToContactPoint).toList();
   }
 
-  public static ContactPoint convertToContactPoint(@NotNull PhoneNumber phoneNumber) {
+  public ContactPoint convertToContactPoint(@NotNull PhoneNumber phoneNumber) {
     var contactPointUse = ContactPointUse.HOME;
     if (PhoneType.MOBILE.equals(phoneNumber.getType())) {
       contactPointUse = ContactPointUse.MOBILE;
@@ -163,7 +171,7 @@ public class FhirConverter {
     return convertToContactPoint(contactPointUse, phoneNumber.getNumber());
   }
 
-  public static ContactPoint convertToContactPoint(ContactPointUse contactPointUse, String number) {
+  public ContactPoint convertToContactPoint(ContactPointUse contactPointUse, String number) {
     // converting string to phone format as recommended by the fhir format.
     // https://www.hl7.org/fhir/datatypes.html#ContactPoint
     try {
@@ -179,41 +187,81 @@ public class FhirConverter {
     return convertToContactPoint(contactPointUse, ContactPointSystem.PHONE, number);
   }
 
-  public static List<ContactPoint> convertEmailsToContactPoint(
-      ContactPointUse use, List<String> emails) {
-    return emails.stream()
-        .map(email -> convertEmailToContactPoint(use, email))
-        .collect(Collectors.toList());
+  public List<ContactPoint> convertEmailsToContactPoint(ContactPointUse use, List<String> emails) {
+    return emails.stream().map(email -> convertEmailToContactPoint(use, email)).toList();
   }
 
-  public static ContactPoint convertEmailToContactPoint(
-      ContactPointUse use, @NotNull String email) {
+  public ContactPoint convertEmailToContactPoint(ContactPointUse use, @NotNull String email) {
     return convertToContactPoint(use, ContactPointSystem.EMAIL, email);
   }
 
-  public static ContactPoint convertToContactPoint(
+  public ContactPoint convertToContactPoint(
       ContactPointUse use, ContactPointSystem system, String value) {
     return new ContactPoint().setUse(use).setSystem(system).setValue(value);
   }
 
-  public static AdministrativeGender convertToAdministrativeGender(@NotNull String gender) {
+  public AdministrativeGender convertToAdministrativeGender(@NotNull String gender) {
     switch (gender.toLowerCase()) {
-      case "male":
-      case "m":
+      case "male", "m":
         return AdministrativeGender.MALE;
-      case "female":
-      case "f":
+      case "female", "f":
         return AdministrativeGender.FEMALE;
       default:
         return AdministrativeGender.UNKNOWN;
     }
   }
 
-  public static Date convertToDate(@NotNull LocalDate date) {
+  public Date convertToDate(@NotNull LocalDate date) {
     return Date.from(date.atStartOfDay(ZoneId.systemDefault()).toInstant());
   }
 
-  public static Address convertToAddress(@NotNull StreetAddress address, String country) {
+  /**
+   * @param zonedDateTime the date time with a time zone
+   * @return the DateTimeType object created from the ZonedDateTime, it's timezone, and second
+   *     temporal precision
+   */
+  public DateTimeType convertToDateTimeType(ZonedDateTime zonedDateTime) {
+    return convertToDateTimeType(zonedDateTime, TemporalPrecisionEnum.SECOND);
+  }
+
+  /**
+   * @param zonedDateTime the date time with a time zone
+   * @param temporalPrecisionEnum precision of the date time, defaults to {@code
+   *     TemporalPrecisionEnum.SECOND}
+   * @return the DateTimeType object created from the ZonedDateTime and it's timezone
+   */
+  public DateTimeType convertToDateTimeType(
+      ZonedDateTime zonedDateTime, TemporalPrecisionEnum temporalPrecisionEnum) {
+    if (zonedDateTime == null) {
+      return null;
+    }
+    if (temporalPrecisionEnum == null) {
+      temporalPrecisionEnum = TemporalPrecisionEnum.SECOND;
+    }
+    return new DateTimeType(
+        Date.from(zonedDateTime.toInstant()),
+        temporalPrecisionEnum,
+        TimeZone.getTimeZone(zonedDateTime.getZone()));
+  }
+
+  /**
+   * @param zonedDateTime the date time with a time zone
+   * @param temporalPrecisionEnum precision of the date time, defaults to {@code
+   *     TemporalPrecisionEnum.MILLI}
+   * @return the InstantType object created from the Instant of the ZonedDateTime and its time zone
+   *     offset
+   */
+  public InstantType convertToInstantType(
+      ZonedDateTime zonedDateTime, TemporalPrecisionEnum temporalPrecisionEnum) {
+    if (zonedDateTime == null) return null;
+    if (temporalPrecisionEnum == null) temporalPrecisionEnum = TemporalPrecisionEnum.MILLI;
+    return new InstantType(
+        Date.from(zonedDateTime.toInstant()),
+        temporalPrecisionEnum,
+        TimeZone.getTimeZone(zonedDateTime.getZone()));
+  }
+
+  public Address convertToAddress(@NotNull StreetAddress address, String country) {
     return convertToAddress(
         address.getStreet(),
         address.getCity(),
@@ -223,7 +271,7 @@ public class FhirConverter {
         country);
   }
 
-  public static Address convertToAddress(
+  public Address convertToAddress(
       List<String> street,
       String city,
       String county,
@@ -243,7 +291,7 @@ public class FhirConverter {
     return address;
   }
 
-  public static Extension convertToRaceExtension(@NotNull String race) {
+  public Extension convertToRaceExtension(@NotNull String race) {
     var ext = new Extension();
     ext.setUrl(RACE_EXTENSION_URL);
     var codeable = new CodeableConcept();
@@ -266,7 +314,7 @@ public class FhirConverter {
     return ext;
   }
 
-  public static Extension convertToEthnicityExtension(String ethnicity) {
+  public Extension convertToEthnicityExtension(String ethnicity) {
     if (StringUtils.isNotBlank(ethnicity)) {
       var ext = new Extension();
       ext.setUrl(ETHNICITY_EXTENSION_URL);
@@ -287,14 +335,13 @@ public class FhirConverter {
     return null;
   }
 
-  public static Optional<Extension> convertToTribalAffiliationExtension(
-      List<String> tribalAffiliations) {
+  public Optional<Extension> convertToTribalAffiliationExtension(List<String> tribalAffiliations) {
     return CollectionUtils.isEmpty(tribalAffiliations)
         ? Optional.empty()
         : convertToTribalAffiliationExtension(tribalAffiliations.get(0));
   }
 
-  public static Optional<Extension> convertToTribalAffiliationExtension(String tribalAffiliation) {
+  public Optional<Extension> convertToTribalAffiliationExtension(String tribalAffiliation) {
     if (StringUtils.isNotBlank(tribalAffiliation)) {
       var ext = new Extension();
       ext.setUrl(TRIBAL_AFFILIATION_EXTENSION_URL);
@@ -312,7 +359,7 @@ public class FhirConverter {
     return Optional.empty();
   }
 
-  public static Practitioner convertToPractitioner(Provider provider) {
+  public Practitioner convertToPractitioner(Provider provider) {
     return convertToPractitioner(
         provider.getInternalId().toString(),
         provider.getNameInfo(),
@@ -322,7 +369,7 @@ public class FhirConverter {
         provider.getProviderId());
   }
 
-  public static Practitioner convertToPractitioner(
+  public Practitioner convertToPractitioner(
       String id,
       PersonName name,
       String telephone,
@@ -344,7 +391,7 @@ public class FhirConverter {
     return practitioner;
   }
 
-  public static Organization convertToOrganization(Facility facility) {
+  public Organization convertToOrganization(Facility facility) {
     return convertToOrganization(
         facility.getInternalId().toString(),
         facility.getFacilityName(),
@@ -355,7 +402,7 @@ public class FhirConverter {
         DEFAULT_COUNTRY);
   }
 
-  public static Organization convertToOrganization(
+  public Organization convertToOrganization(
       String id,
       String name,
       String clia,
@@ -384,7 +431,7 @@ public class FhirConverter {
     return org;
   }
 
-  public static Patient convertToPatient(Person person) {
+  public Patient convertToPatient(Person person) {
     return convertToPatient(
         ConvertToPatientProps.builder()
             .id(person.getInternalId().toString())
@@ -401,7 +448,7 @@ public class FhirConverter {
             .build());
   }
 
-  public static Patient convertToPatient(ConvertToPatientProps props) {
+  public Patient convertToPatient(ConvertToPatientProps props) {
     var patient =
         new Patient()
             .addName(convertToHumanName(props.getName()))
@@ -428,12 +475,12 @@ public class FhirConverter {
     return patient;
   }
 
-  public static Device convertToDevice(@NotNull DeviceType deviceType) {
+  public Device convertToDevice(@NotNull DeviceType deviceType) {
     return convertToDevice(
         deviceType.getManufacturer(), deviceType.getModel(), deviceType.getInternalId().toString());
   }
 
-  public static Device convertToDevice(String manufacturer, @NotNull String model, String id) {
+  public Device convertToDevice(String manufacturer, @NotNull String model, String id) {
     var device =
         new Device()
             .addDeviceName(
@@ -446,50 +493,62 @@ public class FhirConverter {
     return device;
   }
 
-  public static Specimen convertToSpecimen(
-      String specimenCode,
-      String specimenName,
-      String collectionCode,
-      String collectionName,
-      String id,
-      String identifier) {
+  public Specimen convertToSpecimen(ConvertToSpecimenProps props) {
     var specimen = new Specimen();
-    specimen.setId(id);
-    specimen.addIdentifier().setValue(identifier);
-    if (StringUtils.isNotBlank(specimenCode)) {
+    specimen.setId(props.getId());
+    specimen.addIdentifier().setValue(props.getIdentifier());
+    if (StringUtils.isNotBlank(props.getSpecimenCode())) {
       var codeableConcept = specimen.getType();
       var coding = codeableConcept.addCoding();
       coding.setSystem(SNOMED_CODE_SYSTEM);
-      coding.setCode(specimenCode);
-      codeableConcept.setText(specimenName);
+      coding.setCode(props.getSpecimenCode());
+      codeableConcept.setText(props.getSpecimenName());
     }
-    if (StringUtils.isNotBlank(collectionCode)) {
+    if (StringUtils.isNotBlank(props.getCollectionCode())) {
       var collection = specimen.getCollection();
       var codeableConcept = collection.getBodySite();
       var coding = codeableConcept.addCoding();
       coding.setSystem(SNOMED_CODE_SYSTEM);
-      coding.setCode(collectionCode);
-      codeableConcept.setText(collectionName);
+      coding.setCode(props.getCollectionCode());
+      codeableConcept.setText(props.getCollectionName());
+    }
+
+    if (props.getCollectionDate() != null) {
+      var collection = specimen.getCollection();
+      collection.setCollected(convertToDateTimeType(props.getCollectionDate()));
+    }
+
+    if (props.getReceivedTime() != null) {
+      specimen.setReceivedTimeElement(convertToDateTimeType(props.getReceivedTime()));
     }
 
     return specimen;
   }
 
-  public static Specimen convertToSpecimen(@NotNull SpecimenType specimenType) {
+  public Specimen convertToSpecimen(
+      @NotNull SpecimenType specimenType,
+      UUID specimenIdentifier,
+      ZonedDateTime collectionDate,
+      ZonedDateTime receivedTime) {
     return convertToSpecimen(
-        specimenType.getTypeCode(),
-        specimenType.getName(),
-        specimenType.getCollectionLocationCode(),
-        specimenType.getCollectionLocationName(),
-        specimenType.getInternalId().toString(),
-        UUID.randomUUID().toString());
+        ConvertToSpecimenProps.builder()
+            .specimenCode(specimenType.getTypeCode())
+            .specimenName(specimenType.getName())
+            .collectionCode(specimenType.getCollectionLocationCode())
+            .collectionName(specimenType.getCollectionLocationName())
+            .id(specimenType.getInternalId().toString())
+            .identifier(specimenIdentifier.toString())
+            .collectionDate(collectionDate)
+            .receivedTime(receivedTime)
+            .build());
   }
 
-  public static List<Observation> convertToObservation(
+  public List<Observation> convertToObservation(
       Set<Result> results,
       DeviceType deviceType,
       TestCorrectionStatus correctionStatus,
-      String correctionReason) {
+      String correctionReason,
+      Date resultDate) {
     return results.stream()
         .map(
             result -> {
@@ -515,26 +574,28 @@ public class FhirConverter {
                   correctionReason,
                   testkitNameId,
                   equipmentUid,
-                  deviceType.getModel());
+                  deviceType.getModel(),
+                  resultDate);
             })
-        .collect(Collectors.toList());
+        .toList();
   }
 
-  public static String getCommonDiseaseValue(
+  public String getCommonDiseaseValue(
       List<DeviceTypeDisease> deviceTypeDiseases,
       Function<DeviceTypeDisease, String> diseaseValue) {
     List<String> distinctValues = deviceTypeDiseases.stream().map(diseaseValue).distinct().toList();
     return distinctValues.size() == 1 ? distinctValues.get(0) : null;
   }
 
-  public static Observation convertToObservation(
+  public Observation convertToObservation(
       Result result,
       String testPerformedCode,
       TestCorrectionStatus correctionStatus,
       String correctionReason,
       String testkitNameId,
       String equipmentUid,
-      String deviceModel) {
+      String deviceModel,
+      Date resultDate) {
     if (result != null && result.getDisease() != null) {
 
       return convertToObservation(
@@ -550,12 +611,13 @@ public class FhirConverter {
               .testkitNameId(testkitNameId)
               .equipmentUid(equipmentUid)
               .deviceModel(deviceModel)
+              .issued(resultDate)
               .build());
     }
     return null;
   }
 
-  public static Observation convertToObservation(ConvertToObservationProps props) {
+  public Observation convertToObservation(ConvertToObservationProps props) {
     var observation = new Observation();
     observation.setId(props.getId());
     setStatus(observation, props.getCorrectionStatus());
@@ -582,10 +644,13 @@ public class FhirConverter {
         .addInterpretation()
         .addCoding(convertToAbnormalFlagInterpretation(props.getResultCode()));
 
+    observation.setIssued(props.getIssued());
+    observation.getIssuedElement().setTimeZoneZulu(true);
+
     return observation;
   }
 
-  private static Coding convertToAbnormalFlagInterpretation(String resultCode) {
+  private Coding convertToAbnormalFlagInterpretation(String resultCode) {
     Coding abnormalFlag = new Coding();
 
     abnormalFlag.setSystem(ABNORMAL_FLAGS_CODE_SYSTEM);
@@ -601,7 +666,7 @@ public class FhirConverter {
     return abnormalFlag;
   }
 
-  private static void setStatus(Observation observation, TestCorrectionStatus correctionStatus) {
+  private void setStatus(Observation observation, TestCorrectionStatus correctionStatus) {
     switch (correctionStatus) {
       case ORIGINAL:
         observation.setStatus(ObservationStatus.FINAL);
@@ -615,7 +680,7 @@ public class FhirConverter {
     }
   }
 
-  private static void addCorrectionNote(
+  private void addCorrectionNote(
       boolean corrected, String correctionReason, Observation observation) {
     if (corrected) {
       var annotation = observation.addNote();
@@ -627,7 +692,7 @@ public class FhirConverter {
     }
   }
 
-  public static Set<Observation> convertToAOEObservation(
+  public Set<Observation> convertToAOEObservation(
       String eventId, Boolean symptomatic, LocalDate symptomOnsetDate) {
     var observations = new HashSet<Observation>();
     var symptomaticCode =
@@ -652,10 +717,9 @@ public class FhirConverter {
     return observations;
   }
 
-  public static Set<Observation> convertToAOEObservations(
-      String eventId, AskOnEntrySurvey surveyData) {
+  public Set<Observation> convertToAOEObservations(String eventId, AskOnEntrySurvey surveyData) {
     Boolean symptomatic = null;
-    if (surveyData.getNoSymptoms()) {
+    if (Boolean.TRUE.equals(surveyData.getNoSymptoms())) {
       symptomatic = false;
     } else if (surveyData.getSymptoms().containsValue(Boolean.TRUE)) {
       symptomatic = true;
@@ -666,8 +730,7 @@ public class FhirConverter {
     return convertToAOEObservation(eventId, symptomatic, symptomOnsetDate);
   }
 
-  public static Observation createAOEObservation(
-      String uniqueName, CodeableConcept code, Type value) {
+  public Observation createAOEObservation(String uniqueName, CodeableConcept code, Type value) {
     var observation =
         new Observation().setStatus(ObservationStatus.FINAL).setCode(code).setValue(value);
     observation.setId(UUID.nameUUIDFromBytes(uniqueName.getBytes()).toString());
@@ -682,8 +745,7 @@ public class FhirConverter {
     return observation;
   }
 
-  private static CodeableConcept createLoincConcept(
-      String codingCode, String codingDisplay, String text) {
+  private CodeableConcept createLoincConcept(String codingCode, String codingDisplay, String text) {
     var concept = new CodeableConcept().setText(text);
 
     concept.addCoding().setSystem(LOINC_CODE_SYSTEM).setCode(codingCode).setDisplay(codingDisplay);
@@ -691,7 +753,7 @@ public class FhirConverter {
     return concept;
   }
 
-  private static CodeableConcept createYesNoUnkConcept(Boolean val) {
+  private CodeableConcept createYesNoUnkConcept(Boolean val) {
     var concept = new CodeableConcept();
     var coding = concept.addCoding();
     if (val == null) {
@@ -705,8 +767,7 @@ public class FhirConverter {
     return concept;
   }
 
-  private static void addSNOMEDValue(
-      String resultCode, Observation observation, String resultDisplay) {
+  private void addSNOMEDValue(String resultCode, Observation observation, String resultDisplay) {
     var valueCodeableConcept = new CodeableConcept();
     var valueCoding = valueCodeableConcept.addCoding();
     valueCoding.setSystem(SNOMED_CODE_SYSTEM);
@@ -715,7 +776,8 @@ public class FhirConverter {
     observation.setValue(valueCodeableConcept);
   }
 
-  public static ServiceRequest convertToServiceRequest(@NotNull TestOrder order) {
+  public ServiceRequest convertToServiceRequest(
+      @NotNull TestOrder order, ZonedDateTime orderTestDate) {
     ServiceRequestStatus serviceRequestStatus = null;
     switch (order.getOrderStatus()) {
       case PENDING:
@@ -737,11 +799,17 @@ public class FhirConverter {
               order.getDeviceType().getSupportedDiseaseTestPerformed());
     }
     return convertToServiceRequest(
-        serviceRequestStatus, deviceLoincCode, Objects.toString(order.getInternalId(), ""));
+        serviceRequestStatus,
+        deviceLoincCode,
+        Objects.toString(order.getInternalId(), ""),
+        orderTestDate);
   }
 
-  public static ServiceRequest convertToServiceRequest(
-      ServiceRequestStatus status, String requestedCode, String id) {
+  public ServiceRequest convertToServiceRequest(
+      ServiceRequestStatus status,
+      String requestedCode,
+      String id,
+      ZonedDateTime orderEffectiveDate) {
     var serviceRequest = new ServiceRequest();
     serviceRequest.setId(id);
     serviceRequest.setIntent(ServiceRequestIntent.ORDER);
@@ -760,10 +828,24 @@ public class FhirConverter {
                     new Coding()
                         .setSystem(ORDER_CONTROL_CODE_SYSTEM)
                         .setCode(ORDER_CONTROL_CODE_OBSERVATIONS)));
+
+    serviceRequest
+        .addExtension()
+        .setUrl(ORDER_EFFECTIVE_DATE_EXTENSION_URL)
+        .setValue(convertToDateTimeType(orderEffectiveDate, TemporalPrecisionEnum.SECOND));
+
     return serviceRequest;
   }
 
-  public static DiagnosticReport convertToDiagnosticReport(TestEvent testEvent) {
+  /**
+   * Used during single entry FHIR conversion
+   *
+   * @param testEvent Single entry test event.
+   * @param currentDate Used to set {@code DiagnosticReport.issued}, the instant this version was *
+   *     made.
+   * @return DiagnosticReport
+   */
+  public DiagnosticReport convertToDiagnosticReport(TestEvent testEvent, Date currentDate) {
     DiagnosticReportStatus status = null;
     switch (testEvent.getCorrectionStatus()) {
       case ORIGINAL:
@@ -784,21 +866,43 @@ public class FhirConverter {
               testEvent.getDeviceType().getSupportedDiseaseTestPerformed());
     }
 
+    ZonedDateTime dateTested = null;
+    if (testEvent.getDateTested() != null) {
+      // getDateTested returns a Date representing an exact moment of time so
+      // finding a specific timezone for the TestEvent is not required to ensure it is accurate
+      dateTested = ZonedDateTime.ofInstant(testEvent.getDateTested().toInstant(), ZoneOffset.UTC);
+    }
+    ZonedDateTime dateIssued = null;
+    if (currentDate != null)
+      dateIssued = ZonedDateTime.ofInstant(currentDate.toInstant(), ZoneOffset.UTC);
+
     return convertToDiagnosticReport(
-        status,
-        code,
-        Objects.toString(testEvent.getInternalId(), ""),
-        testEvent.getDateTested(),
-        testEvent.getUpdatedAt());
+        status, code, Objects.toString(testEvent.getInternalId(), ""), dateTested, dateIssued);
   }
 
-  public static DiagnosticReport convertToDiagnosticReport(
-      DiagnosticReportStatus status, String code, String id, Date dateTested, Date dateUpdated) {
+  /**
+   * @param status Diagnostic report status
+   * @param code LOINC code
+   * @param id Diagnostic report id
+   * @param dateTested Used to set {@code DiagnosticReport.effective}, the clinically relevant
+   *     time/time-period for report.
+   * @param dateIssued Used to set {@code DiagnosticReport.issued}, the date and time that this
+   *     version of the report was made available to providers, typically after the report was
+   *     reviewed and verified.
+   * @return DiagnosticReport
+   */
+  public DiagnosticReport convertToDiagnosticReport(
+      DiagnosticReportStatus status,
+      String code,
+      String id,
+      ZonedDateTime dateTested,
+      ZonedDateTime dateIssued) {
     var diagnosticReport =
         new DiagnosticReport()
             .setStatus(status)
-            .setEffective(new DateTimeType(dateTested))
-            .setIssued(dateUpdated);
+            .setEffective(convertToDateTimeType(dateTested))
+            .setIssuedElement(convertToInstantType(dateIssued, TemporalPrecisionEnum.SECOND));
+
     diagnosticReport.setId(id);
     if (StringUtils.isNotBlank(code)) {
       diagnosticReport.getCode().addCoding().setSystem(LOINC_CODE_SYSTEM).setCode(code);
@@ -807,11 +911,21 @@ public class FhirConverter {
     return diagnosticReport;
   }
 
-  public static Bundle createFhirBundle(
-      @NotNull TestEvent testEvent,
-      GitProperties gitProperties,
-      Date currentDate,
-      String processingId) {
+  /**
+   * @param testEvent The single entry test event created in {@code TestOrderService}
+   * @param gitProperties Git properties
+   * @param processingId Processing id
+   * @return FHIR bundle
+   * @see TestOrderService
+   */
+  public Bundle createFhirBundle(
+      @NotNull TestEvent testEvent, GitProperties gitProperties, String processingId) {
+
+    Date currentDate = dateGenerator.newDate();
+    ZonedDateTime dateTested =
+        testEvent.getDateTested() != null
+            ? ZonedDateTime.ofInstant(testEvent.getDateTested().toInstant(), ZoneOffset.UTC)
+            : null;
 
     return createFhirBundle(
         CreateFhirBundleProps.builder()
@@ -820,25 +934,28 @@ public class FhirConverter {
             .orderingFacility(null)
             .practitioner(convertToPractitioner(testEvent.getProviderData()))
             .device(convertToDevice(testEvent.getDeviceType()))
-            .specimen(convertToSpecimen(testEvent.getSpecimenType()))
+            .specimen(
+                convertToSpecimen(
+                    testEvent.getSpecimenType(), uuidGenerator.randomUUID(), null, null))
             .resultObservations(
                 convertToObservation(
                     testEvent.getResults(),
                     testEvent.getDeviceType(),
                     testEvent.getCorrectionStatus(),
-                    testEvent.getReasonForCorrection()))
+                    testEvent.getReasonForCorrection(),
+                    testEvent.getDateTested()))
             .aoeObservations(
                 convertToAOEObservations(
                     testEvent.getInternalId().toString(), testEvent.getSurveyData()))
-            .serviceRequest(convertToServiceRequest(testEvent.getOrder()))
-            .diagnosticReport(convertToDiagnosticReport(testEvent))
+            .serviceRequest(convertToServiceRequest(testEvent.getOrder(), dateTested))
+            .diagnosticReport(convertToDiagnosticReport(testEvent, currentDate))
             .currentDate(currentDate)
             .gitProperties(gitProperties)
             .processingId(processingId)
             .build());
   }
 
-  public static Bundle createFhirBundle(CreateFhirBundleProps props) {
+  public Bundle createFhirBundle(CreateFhirBundleProps props) {
     var patientFullUrl = ResourceType.Patient + "/" + props.getPatient().getId();
     var orderingFacilityFullUrl =
         props.getOrderingFacility() == null
@@ -859,8 +976,11 @@ public class FhirConverter {
             orderingFacilityFullUrl == null
                 ? testingLabOrganizationFullUrl
                 : orderingFacilityFullUrl,
-            practitionerFullUrl);
-    var provenance = createProvenance(testingLabOrganizationFullUrl, props.getCurrentDate());
+            practitionerFullUrl,
+            uuidGenerator.randomUUID());
+    var provenance =
+        createProvenance(
+            testingLabOrganizationFullUrl, props.getCurrentDate(), uuidGenerator.randomUUID());
     var provenanceFullUrl = ResourceType.Provenance + "/" + provenance.getId();
     var messageHeader =
         createMessageHeader(
@@ -868,7 +988,8 @@ public class FhirConverter {
             diagnosticReportFullUrl,
             provenanceFullUrl,
             props.getGitProperties(),
-            props.getProcessingId());
+            props.getProcessingId(),
+            uuidGenerator.randomUUID());
     var practitionerRoleFullUrl = ResourceType.PractitionerRole + "/" + practitionerRole.getId();
     var messageHeaderFullUrl = ResourceType.MessageHeader + "/" + messageHeader.getId();
 
@@ -935,6 +1056,9 @@ public class FhirConverter {
             .setType(BundleType.MESSAGE)
             .setTimestamp(props.getCurrentDate())
             .setIdentifier(new Identifier().setValue(props.getDiagnosticReport().getId()));
+
+    bundle.getTimestampElement().setTimeZoneZulu(true);
+
     entryList.forEach(
         pair ->
             bundle.addEntry(
@@ -945,9 +1069,11 @@ public class FhirConverter {
     return bundle;
   }
 
-  public static Provenance createProvenance(String organizationFullUrl, Date dateTested) {
+  public Provenance createProvenance(
+      String organizationFullUrl, Date dateTested, UUID provenanceId) {
     var provenance = new Provenance();
-    provenance.setId(UUID.randomUUID().toString());
+
+    provenance.setId(provenanceId.toString());
     provenance
         .getActivity()
         .addCoding()
@@ -956,27 +1082,29 @@ public class FhirConverter {
         .setDisplay(EVENT_TYPE_DISPLAY);
     provenance.addAgent().setWho(new Reference().setReference(organizationFullUrl));
     provenance.setRecorded(dateTested);
+    provenance.getRecordedElement().setTimeZoneZulu(true);
     return provenance;
   }
 
-  public static PractitionerRole createPractitionerRole(
-      String organizationUrl, String practitionerUrl) {
+  public PractitionerRole createPractitionerRole(
+      String organizationUrl, String practitionerUrl, UUID practitionerRoleId) {
     var practitionerRole = new PractitionerRole();
-    practitionerRole.setId(UUID.randomUUID().toString());
+    practitionerRole.setId(practitionerRoleId.toString());
     practitionerRole
         .setPractitioner(new Reference().setReference(practitionerUrl))
         .setOrganization(new Reference().setReference(organizationUrl));
     return practitionerRole;
   }
 
-  public static MessageHeader createMessageHeader(
+  public MessageHeader createMessageHeader(
       String organizationUrl,
       String mainResourceUrl,
       String provenanceFullUrl,
       GitProperties gitProperties,
-      String processingId) {
+      String processingId,
+      UUID messageHeaderId) {
     var messageHeader = new MessageHeader();
-    messageHeader.setId(UUID.randomUUID().toString());
+    messageHeader.setId(messageHeaderId.toString());
     messageHeader
         .getEventCoding()
         .setSystem(EVENT_TYPE_CODE_SYSTEM)
